[package]
name = "task_manager_command_line"
version = "0.1.0"
edition = "2024"
description = "A simple task manager cli tool"
license = "MIT"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
toml = "0.9.5"

[[bin]]
name = "tm"
path = "src/main.rs" # Specifies the path to your main file
